[gd_scene load_steps=15 format=3 uid="uid://bnpkmu5c8hrax"]

[ext_resource type="PackedScene" uid="uid://b3g051f07h7dq" path="res://scenes/map/map.tscn" id="1_3pj57"]
[ext_resource type="Script" uid="uid://gvqlls5jblv3" path="res://scenes/game/game.gd" id="1_7h61r"]
[ext_resource type="PackedScene" uid="uid://tx64gjx52y3" path="res://scenes/computer/computer.tscn" id="3_0sr1o"]
[ext_resource type="PackedScene" uid="uid://daf1bd8e1vvlx" path="res://scenes/UI/ui.tscn" id="4_kelw5"]
[ext_resource type="Texture2D" uid="uid://k02jbmi3ud0a" path="res://assets/sprites/own/pc_1_0001.png" id="11_5jirj"]
[ext_resource type="Texture2D" uid="uid://dwjhue7gjcabx" path="res://assets/sprites/own/pc_4_0002.png" id="11_10c2w"]
[ext_resource type="Texture2D" uid="uid://cc0shbq15u3n1" path="res://assets/sprites/own/pc_4_0001.png" id="11_otnwt"]
[ext_resource type="Texture2D" uid="uid://dasows03n4uqd" path="res://assets/sprites/own/pc_3_0001.png" id="12_3xj4h"]
[ext_resource type="Texture2D" uid="uid://bjadbo2vechr4" path="res://assets/sprites/own/pc_2_0001.png" id="12_vaxfo"]
[ext_resource type="Texture2D" uid="uid://dbvic5c5jiuto" path="res://assets/sprites/own/pc_3_0002.png" id="13_pg2xm"]
[ext_resource type="PackedScene" uid="uid://cbnqodshx2kif" path="res://scenes/conveyor_belt/conveyor_belt_implemented.tscn" id="13_vaxfo"]
[ext_resource type="Texture2D" uid="uid://calkw8w2mvhn" path="res://assets/sprites/own/pc_2_0002.png" id="15_gc57s"]
[ext_resource type="Texture2D" uid="uid://bm5yx8xawkmbk" path="res://assets/sprites/own/pc_1_0002.png" id="17_8b66f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vaxfo"]
size = Vector2(610, 71)

[node name="Game" type="Node"]
script = ExtResource("1_7h61r")

[node name="HostCamera" type="Camera2D" parent="."]
position = Vector2(319, 193)
zoom = Vector2(0.45, 0.45)

[node name="Map" parent="." instance=ExtResource("1_3pj57")]

[node name="ConveyorBelt" parent="." instance=ExtResource("13_vaxfo")]

[node name="StaticBody2D" type="StaticBody2D" parent="ConveyorBelt"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyorBelt/StaticBody2D"]
position = Vector2(313, 35.5)
shape = SubResource("RectangleShape2D_vaxfo")

[node name="Computers" type="Node" parent="."]

[node name="PC_1" parent="Computers" instance=ExtResource("3_0sr1o")]
position = Vector2(163, 116)
time_for_conclude = 2
texture_on = ExtResource("11_10c2w")
texture_off = ExtResource("11_otnwt")

[node name="PC_2" parent="Computers" instance=ExtResource("3_0sr1o")]
position = Vector2(254, 116)
pc_id = 2
texture_on = ExtResource("13_pg2xm")
texture_off = ExtResource("12_3xj4h")

[node name="PC_3" parent="Computers" instance=ExtResource("3_0sr1o")]
position = Vector2(163, 201)
pc_id = 3
texture_on = ExtResource("15_gc57s")
texture_off = ExtResource("12_vaxfo")

[node name="PC_4" parent="Computers" instance=ExtResource("3_0sr1o")]
position = Vector2(256, 199)
pc_id = 4
texture_on = ExtResource("17_8b66f")
texture_off = ExtResource("11_5jirj")

[node name="Players" type="Node" parent="."]

[node name="UI" parent="." instance=ExtResource("4_kelw5")]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="player_entered_pc" from="Computers/PC_1" to="." method="_on_pc_player_entered_pc"]
[connection signal="player_exited_pc" from="Computers/PC_1" to="." method="_on_pc_player_exited_pc"]
[connection signal="work_concluded" from="Computers/PC_1" to="." method="_on_pc_work_concluded"]
[connection signal="player_entered_pc" from="Computers/PC_2" to="." method="_on_pc_player_entered_pc"]
[connection signal="player_exited_pc" from="Computers/PC_2" to="." method="_on_pc_player_exited_pc"]
[connection signal="work_concluded" from="Computers/PC_2" to="." method="_on_pc_work_concluded"]
[connection signal="player_entered_pc" from="Computers/PC_3" to="." method="_on_pc_player_entered_pc"]
[connection signal="player_exited_pc" from="Computers/PC_3" to="." method="_on_pc_player_exited_pc"]
[connection signal="work_concluded" from="Computers/PC_3" to="." method="_on_pc_work_concluded"]
[connection signal="player_entered_pc" from="Computers/PC_4" to="." method="_on_pc_player_entered_pc"]
[connection signal="player_exited_pc" from="Computers/PC_4" to="." method="_on_pc_player_exited_pc"]
[connection signal="work_concluded" from="Computers/PC_4" to="." method="_on_pc_work_concluded"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
